--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Lemonada:wght@500&family=Potta+One&family=Roboto&family=Sriracha&family=Yusei+Magic&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Coda+Caption:wght@800&display=swap" rel="stylesheet">
     <title>Trivia con POO</title>
 </head>
 <body>
     <div class="container">
         <div class="row justify-content-center">
             <div class="col col-md-8">
-                <div class="card text-center mt-5 card-presentation">                    
+                <div class="card text-center mt-5 card-presentation" id="card-presentation">                    
                     <div class="card-body">
                       <h1 class="title-font">Welcome to trivia</h1>
                       <h4 class="title-font">What about it?</h4>
@@ -35,7 +37,7 @@
             </div>
             <div class="row justify-content-center">
                 <div class="col col-md-4 my-5">
-                    <div class="card" id="trivia-card">
+                    <div class="card hide-element" id="trivia-card">
                         <div class="card-body">
                             <form action="/question" id="trivia-form">
                                 <div class="mt-3">
@@ -81,6 +83,12 @@
         </div>
         <div class="row" id="questions-container">
             <!-- aqui iran las preguntas  -->
+        </div>
+        <div class="row justify-content-center hide-element" id="score-container">
+            <button class="btn btn-danger my-5 col col-md-8" id="score-button">Get Score </button>
+        </div>
+        <div class="row justify-content-center" id="score-container">
+            <!-- aqui se mostrara el score -->
         </div>
     </div>
     <script type="module" src="./main.js"></script>
